# 2d-ising-model

./: CMakeLists.txt  README.md
src/: ising.cpp
